--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "export": "./export",
     "install": "./install",
-    "update-repo": "git add * && git commit -m \"update dotfiles\" && git push HEAD"
+    "update-repo": "git add * && git commit -m \"update dotfiles\" && git push origin HEAD"
   },
   "keywords": [],
   "author": "",
