--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -23,15 +23,19 @@ include Batman.conf
 # bold_font       Hasklug Nerd Font Mono
 # italic_font     Hasklug Nerd Font Mono
 
-# FIRA
-font_family     FiraCode Nerd Font Mono Medium
-bold_font       FiraCode Nerd Font Mono Bold
-italic_font     Hasklug Nerd Font Mono Italic
+# Hermit
+font_family Hurmit NF
+bold_font Hurmit NF
+italic_font Hurmit NF
 
+# FIRA
+# font_family     FiraCode Nerd Font Mono Medium
+# bold_font       FiraCode Nerd Font Mono Bold
+# italic_font     FiraCode Nerd Font Mono Regular
+ 
 # font_family     ProFontIIx Nerd Font Mono
 # bold_font       ProFontIIx Nerd Font Mono
 # italic_font     ProFontIIx Nerd Font Mono
-
 
 # font_family      BigBlue_Terminal_437TT Nerd Font Mono
 # bold_font        BigBlue_Terminal_437TT Nerd Font Mono
@@ -56,7 +60,7 @@ italic_font     Hasklug Nerd Font Mono Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 13.0
 
 #: Font size (in pts)
 
