---CHANGES:---   M undotted/init.vim  M undotted/kitty.conf  M undotted/zshrc ?? yarn.lock

--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -281,9 +281,9 @@ adjust_line_height  3
 
 #: Window layout {{{
 
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+remember_window_size  yes
+initial_window_width  640
+initial_window_height 400
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -1001,8 +1001,10 @@ editor nvim
 
 tab_bar_style fade
 tab_fade 0.25 0.5 0.75 1
-active_tab_foreground #eeeeee
-active_tab_background #932339
+# active_tab_foreground #eeeeee
+# active_tab_background #a89984
+active_tab_background #ffe80b
+active_tab_foreground #333333
 inactive_tab_foreground   #eee
 inactive_tab_background   #333
 active_tab_font_style   bold-italic
