--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -674,6 +674,7 @@ editor nvim
 #: For example::
 
 #:     map kitty_mod+e combine : new_window : next_layout
+#:     map kitty_mod+e combine : new_window : next_layout
 
 #: this will create a new window and switch to the next available
 #: layout
@@ -819,6 +820,8 @@ editor nvim
 
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
 #: }}}
+map cmd+t new_tab_with_cwd
+map cmd+enter new_window_with_cwd
 
 #: Layout management {{{
 
