--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -1,5 +1,4 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
-# include snazzy.conf
 include Batman.conf
 
 # hacker theme
@@ -293,6 +292,7 @@ initial_window_height 400
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
+enabled_layouts tall:full_size=2
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
