---CHANGES:---   M undotted/kitty.conf  M undotted/zshrc

--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -280,9 +280,9 @@ adjust_line_height  3
 
 #: Window layout {{{
 
-remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+remember_window_size  no
+initial_window_width  890
+initial_window_height 650
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -292,7 +292,7 @@ initial_window_height 400
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
-enabled_layouts tall:full_size=2
+# enabled_layouts tall:full_size=2
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
