---CHANGES:---   M undotted/init.vim  M undotted/kitty.conf

--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -281,8 +281,13 @@ adjust_line_height  3
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  890
-initial_window_height 650
+
+# smaller comfy option
+# initial_window_width  940
+# initial_window_height 700
+
+initial_window_width  1240
+initial_window_height 800
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
