--- a/undotted/coc-settings.json
+++ b/undotted/coc-settings.json
@@ -1,7 +1,18 @@
 {
-"tsserver.enableJavascript": true,
-// "coc.preferences.jumpCommand": "drop",
+  "tsserver.enableJavascript": true,
+  // "coc.preferences.jumpCommand": "drop",
   "languageserver": {
+    "haskell": {
+      "command": "hie-wrapper",
+      "args": ["--lsp"],
+      "rootPatterns": ["stack.yaml", "cabal.config", "package.yaml"],
+      "filetypes": ["hs", "lhs", "haskell"],
+      "initializationOptions": {
+        "languageServerHaskell": {
+          "hlintOn": true
+        }
+      }
+    },
     "javascript": {
       "command": "flow",
       "args": ["lsp"],
