---CHANGES:---   M undotted/coc-settings.json  M undotted/init.vim  M undotted/vimrc  M undotted/zshrc

--- a/undotted/coc-settings.json
+++ b/undotted/coc-settings.json
@@ -24,7 +24,7 @@
     },
     "reason": {
       "command": "~/Documents/LanguageServer/reason-language-server",
-      "filetypes": ["reason"]
+      "filetypes": ["reason", "ocaml"]
     },
     "rust": {
       "command": "rls",
