---CHANGES:---   M undotted/coc-settings.json  M undotted/init.vim  M undotted/vimrc  M undotted/zshrc

--- a/undotted/coc-settings.json
+++ b/undotted/coc-settings.json
@@ -29,6 +29,10 @@
     "rust": {
       "command": "rls",
       "filetypes": ["rust"]
+    },
+    "kotlin": {
+      "command": "~/Documents/LanguageServer/kotlin-language-server/server/build/scripts/server",
+      "filetypes": ["kotlin"]
     }
   }
 }
