---CHANGES:---   M undotted/kitty.conf  M undotted/vimrc

--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -23,14 +23,14 @@ include gruvbox_dark.conf
 # italic_font     Hasklug Nerd Font Mono
 
 # Hermit
-font_family Hurmit NF
-bold_font Hurmit NF
-italic_font Hurmit NF
+# font_family Hurmit NF
+# bold_font Hurmit NF
+# italic_font Hurmit NF
 
 # FIRA
-# font_family     FiraCode Nerd Font Mono Medium
-# bold_font       FiraCode Nerd Font Mono Bold
-# italic_font     FiraCode Nerd Font Mono Regular
+font_family     FiraCode Nerd Font Mono Medium
+bold_font       FiraCode Nerd Font Mono Bold
+italic_font     FiraCode Nerd Font Mono Regular
  
 # font_family     ProFontIIx Nerd Font Mono
 # bold_font       ProFontIIx Nerd Font Mono
