--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -27,10 +27,20 @@ include gruvbox_dark.conf
 # bold_font Hurmit NF
 # italic_font Hurmit NF
 
+# JetBrains
+font_family     JetBrains Mono Regular
+bold_font       JetBrains Mono Bold
+italic_font     JetBrains Mono Italic
+
+# Monolisa
+# font_family     MonoLisa Regular
+# bold_font       MonoLisa Bold
+# italic_font     MonoLisa Regular
+
 # FIRA
-font_family     FiraCode Nerd Font Mono Medium
-bold_font       FiraCode Nerd Font Mono Bold
-italic_font     FiraCode Nerd Font Mono Regular
+# font_family     FiraCode Nerd Font Mono Medium
+# bold_font       FiraCode Nerd Font Mono Bold
+# italic_font     FiraCode Nerd Font Mono Regular
  
 # font_family     ProFontIIx Nerd Font Mono
 # bold_font       ProFontIIx Nerd Font Mono
