---CHANGES:---   M undotted/init.vim  M undotted/kitty.conf  M undotted/vimrc

--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -1,5 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
-include gruvbox_dark.conf
+# include gruvbox_dark.conf
+include kitty-themes/themes/OneDark.conf
 
 # hacker theme
 
