---CHANGES:---   M undotted/coc-settings.vim8.json  M undotted/tmux.conf.local  M undotted/zshrc

--- a/undotted/coc-settings.vim8.json
+++ b/undotted/coc-settings.vim8.json
@@ -1,6 +1,7 @@
 {
   "tsserver.enableJavascript": true,
   // "coc.preferences.jumpCommand": "drop",
+  "coc.preferences.formatOnSaveFiletypes": ["prisma"],
   "languageserver": {
     "rescript": {
       "enable": true,
@@ -57,4 +58,3 @@
     }
   }
 }
-
