---CHANGES:---   M scripts/data.sh  M undotted/alacritty.yml  M undotted/init.lua  M undotted/kitty.conf  M undotted/zshrc ?? undotted/alacritty.ref.yml

--- a/undotted/kitty.conf
+++ b/undotted/kitty.conf
@@ -32,6 +32,7 @@ include kitty-themes/themes/gruvbox_dark.conf
 font_family     JetBrains Mono Regular
 bold_font       JetBrains Mono Bold
 italic_font     JetBrains Mono Italic
+bold_italic_font auto
 
 # Monolisa
 # font_family     MonoLisa Regular
@@ -70,7 +71,7 @@ italic_font     JetBrains Mono Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 13.0
+font_size 13
 
 #: Font size (in pts)
 
