--- a/undotted/alacritty.yml
+++ b/undotted/alacritty.yml
@@ -8,6 +8,7 @@ window:
 font:
   family: JetBrains Mono
   size: 13
+  # TODO: figure out font later
   # normal:
     # family: JetBrains Mono
   # bold:
@@ -17,3 +18,7 @@ font:
   # bold_italic:
     # family: JetBrains Mono Bold Italic
   # size: 13
+shell:
+  program: /opt/homebrew/bin/tmux
+  args:
+    - new-session
