--- a/undotted/alacritty.yml
+++ b/undotted/alacritty.yml
@@ -1,3 +1,6 @@
+env:
+  TERM: xterm-256color
+
 startup_mode: Maximized
 opcaity: 0.2
 
@@ -5,20 +8,39 @@ window:
   dimensions:
     columns: 200
     lines: 150
+  history: 1000
+  multiplier: 3
+cursor:
+  style:
+    shape: Block
+    blinking: On
+  unfocused_hollow: false
 font:
   family: JetBrains Mono
   size: 13
   # TODO: figure out font later
   # normal:
-    # family: JetBrains Mono
+  # family: JetBrains Mono
   # bold:
-    # family: JetBrains Mono Bold
+  # family: JetBrains Mono Bold
   # italic:
-    # family: JetBrains Mono Italic
+  # family: JetBrains Mono Italic
   # bold_italic:
-    # family: JetBrains Mono Bold Italic
+  # family: JetBrains Mono Bold Italic
   # size: 13
 shell:
   program: /opt/homebrew/bin/tmux
   args:
     - new-session
+    - -A
+    - -D
+    - -s
+    - main
+  # TODO: doesn't work, find out why
+  # program: /bin/zsh
+  # args:
+  # - --login
+  # - tmux
+  # - new-session
+  # args: ["-l", "-c", "tmux attach || tmux"]
+live_config_reload: true
