--- a/undotted/alacritty.yml
+++ b/undotted/alacritty.yml
@@ -17,7 +17,7 @@ cursor:
     blinking: On
   unfocused_hollow: false
 font:
-  family: JetBrains Mono
+  family: JetBrainsMono NF
   size: 14
   # TODO: figure out font later
   # normal:
