--- a/undotted/alacritty.yml
+++ b/undotted/alacritty.yml
@@ -18,8 +18,18 @@ cursor:
   unfocused_hollow: false
 font:
   #family: JetBrainsMono NF
-  family: JetBrains Mono
+  #family: JetBrainsMono Nerd Font
   size: 14
+  normal:
+    family: JetBrainsMono Nerd Font
+    style: Regular
+  bold:
+    family: JetBrains Mono
+    style: Bold
+  italic:
+    family: JetBrains Mono
+    style: Italic
+
   # TODO: figure out font later
   # normal:
   # family: JetBrains Mono
