--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -3,8 +3,10 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
+#set -g @plugin 'catppuccin/tmux'
 #set -s default-terminal 'tmux-256color'
 
+#set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
  #dracula customizations
 set -g @dracula-plugins "battery weather time"
 set -g @dracula-show-powerline true
