--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -2,16 +2,19 @@ setw -g mouse on
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-#set -g @plugin 'catppuccin/tmux'
+#set -g @plugin 'dracula/tmux'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -s default-terminal 'tmux-256color'
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-#set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
+set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
  #dracula customizations
-set -g @dracula-plugins "battery weather time"
-set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
+#set -g @dracula-plugins "battery time"
+#set -g @dracula-show-powerline true
+#set -g @dracula-show-fahrenheit false
+#set -g @dracula-military-time true
 
 run '~/.tmux/plugins/tpm/tpm'
 
