--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -5,10 +5,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 #set -g @plugin 'dracula/tmux'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# this causes error
 #set -s default-terminal 'tmux-256color'
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+set -g @resurrect-strategy-nvim 'session'
 set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
  #dracula customizations
 #set -g @dracula-plugins "battery time"
