UPDATES:   M undotted/tmux.conf

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -2,6 +2,7 @@ setw -g mouse on
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
 #set -g @plugin 'dracula/tmux'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -12,6 +13,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g @resurrect-strategy-nvim 'session'
 set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+#set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
  #dracula customizations
 #set -g @dracula-plugins "battery time"
 #set -g @dracula-show-powerline true
