--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -10,6 +10,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -s default-terminal 'tmux-256color'
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 0
 
 set -g @resurrect-strategy-nvim 'session'
 set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
