--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -3,30 +3,31 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'dracula/tmux'
 # this causes error
 #set -s default-terminal 'tmux-256color'
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set -g default-terminal "xterm-256color"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 0
 
 set -g @resurrect-strategy-nvim 'session'
-#set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+
+set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
 #set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
  #dracula customizations
 
-set -g @dracula-plugins "battery time"
+#set -g @dracula-plugins "battery time"
 
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
+#set -g @dracula-show-fahrenheit false
+#set -g @dracula-military-time true
 
-set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
+#set -g @dracula-show-powerline true
+#set -g @dracula-show-flags true
+#set -g @dracula-show-left-icon session
 set -g status-position top
 
 run '~/.tmux/plugins/tpm/tpm'
