--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -8,8 +8,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 #set -g @plugin 'dracula/tmux'
 # this causes error
 #set -s default-terminal 'tmux-256color'
-#set -g default-terminal "xterm-256color"
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 0
@@ -19,6 +19,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
 #set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
  #dracula customizations
+set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
 
 #set -g @dracula-plugins "battery time"
 
