--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -3,8 +3,10 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @plugin 'kylepeeler/tmux-nightowl'
 #set -g @plugin 'dracula/tmux'
 # this causes error
 #set -s default-terminal 'tmux-256color'
@@ -16,10 +18,10 @@ setw -g pane-base-index 0
 
 set -g @resurrect-strategy-nvim 'session'
 
-set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+# set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
 #set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
  #dracula customizations
-set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
+# set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
 
 #set -g @dracula-plugins "battery time"
 
@@ -43,3 +45,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L 
 bind -r l select-pane -R 
 
+set -g @nightowl-show-network false
+set -g @nightowl-show-powerline true
+set -g @nightowl-show-left-icon session
+set -g @nightowl-cpu-usage true
