UPDATES:   M undotted/tmux.conf

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -48,4 +48,5 @@ bind -r l select-pane -R
 set -g @nightowl-show-network false
 set -g @nightowl-show-powerline true
 set -g @nightowl-show-left-icon session
+set -g @nightowl-show-weather false
 set -g @nightowl-cpu-usage true
