UPDATES:   M undotted/tmux.conf

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -50,3 +50,5 @@ set -g @nightowl-show-powerline true
 set -g @nightowl-show-left-icon session
 set -g @nightowl-show-weather false
 set -g @nightowl-cpu-usage true
+set -g @nightowl-ram-usage true
+# set -g @nightowl-gpu-usage true
