--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -14,6 +14,14 @@ set -g @nightowl-show-left-icon session
 set -g @nightowl-show-weather false
 set -g @nightowl-cpu-usage true
 set -g @nightowl-ram-usage true
+
+set -g @nightowl-border-contrast false
+
+set -g @nightowl-military-time true
+set -g @nightowl-show-timezone false
+
+set -g @nightowl-show-right-sep ""
+set -g @nightowl-show-left-sep ""
 # set -g @nightowl-gpu-usage true
 #set -g @plugin 'dracula/tmux'
 # this causes error
@@ -52,4 +60,3 @@ bind -r k select-pane -U
 bind -r j select-pane -D 
 bind -r h select-pane -L 
 bind -r l select-pane -R 
-
