--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -3,10 +3,10 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'kylepeeler/tmux-nightowl'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g @plugin 'kylepeeler/tmux-nightowl'
 
 set -g @nightowl-show-network false
 set -g @nightowl-show-powerline true
@@ -20,8 +20,9 @@ set -g @nightowl-border-contrast false
 set -g @nightowl-military-time true
 set -g @nightowl-show-timezone false
 
-set -g @nightowl-show-right-sep ""
+
 set -g @nightowl-show-left-sep ""
+set -g @nightowl-show-right-sep ""
 # set -g @nightowl-gpu-usage true
 #set -g @plugin 'dracula/tmux'
 # this causes error
@@ -34,10 +35,10 @@ setw -g pane-base-index 0
 
 set -g @resurrect-strategy-nvim 'session'
 
-# set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
 #set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
  #dracula customizations
-# set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
+set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
 
 #set -g @dracula-plugins "battery time"
 
