--- a/undotted/alacritty.yml
+++ b/undotted/alacritty.yml
@@ -24,10 +24,10 @@ font:
     family: JetBrainsMono Nerd Font
     style: Regular
   bold:
-    family: JetBrains Mono
+    family: JetBrainsMono Nerd Font
     style: Bold
   italic:
-    family: JetBrains Mono
+    family: JetBrainsMono Nerd Font
     style: Italic
 
   # TODO: figure out font later
