--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -7,18 +7,19 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 
-set -g @nightowl-show-network false
-set -g @nightowl-show-powerline true
-set -g @nightowl-show-left-icon session
-set -g @nightowl-show-weather false
-set -g @nightowl-cpu-usage true
-set -g @nightowl-ram-usage true
-
-set -g @nightowl-border-contrast false
-
-set -g @nightowl-military-time true
-set -g @nightowl-show-timezone false
+# set -g @nightowl-show-network false
+# set -g @nightowl-show-powerline true
+# set -g @nightowl-show-left-icon session
+# set -g @nightowl-show-weather false
+# set -g @nightowl-cpu-usage true
+# set -g @nightowl-ram-usage true
+#
+# set -g @nightowl-border-contrast false
+#
+# set -g @nightowl-military-time true
+# set -g @nightowl-show-timezone false
 
 
 set -g @nightowl-show-left-sep ""
@@ -57,7 +58,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
