--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -3,62 +3,58 @@ setw -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'kylepeeler/tmux-nightowl'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g status-position top
 
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @resurrect-strategy-nvim 'session'
+set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
+run '~/.tmux/plugins/tpm/tpm'
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+# vim-like pane switching
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+
+# deprecated settings
+
+# set -g @plugin 'kylepeeler/tmux-nightowl'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 # set -g @nightowl-show-network false
 # set -g @nightowl-show-powerline true
 # set -g @nightowl-show-left-icon session
 # set -g @nightowl-show-weather false
 # set -g @nightowl-cpu-usage true
 # set -g @nightowl-ram-usage true
-#
 # set -g @nightowl-border-contrast false
-#
 # set -g @nightowl-military-time true
 # set -g @nightowl-show-timezone false
+# set -g @nightowl-gpu-usage true
+# set -g @plugin 'dracula/tmux'
+# this causes error
+# set -s default-terminal 'tmux-256color'
+# set -g @dracula-plugins "battery time"
+# set -g @dracula-show-fahrenheit false
+# set -g @dracula-military-time true
+# set -g @dracula-show-powerline true
+# set -g @dracula-show-flags true
+# set -g @dracula-show-left-icon session
+# set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+# dracula customizations
 
 
 set -g @nightowl-show-left-sep ""
 set -g @nightowl-show-right-sep ""
-# set -g @nightowl-gpu-usage true
-#set -g @plugin 'dracula/tmux'
-# this causes error
-#set -s default-terminal 'tmux-256color'
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 0
-
-set -g @resurrect-strategy-nvim 'session'
-
-set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
-#set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
- #dracula customizations
-set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-
-#set -g @dracula-plugins "battery time"
-
-#set -g @dracula-show-fahrenheit false
-#set -g @dracula-military-time true
-
-#set -g @dracula-show-powerline true
-#set -g @dracula-show-flags true
-#set -g @dracula-show-left-icon session
-set -g status-position top
-
-run '~/.tmux/plugins/tpm/tpm'
-
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
-# vim-like pane switching
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
