--- a/undotted/alacritty.yml
+++ b/undotted/alacritty.yml
@@ -21,15 +21,15 @@ font:
   #family: JetBrainsMono Nerd Font
   size: 15
   normal:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font 
     style: Regular
     # family: JetBrainsMono Nerd Font
     # style: Regular
   bold:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font 
     style: Bold
   italic:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font 
     style: Italic
 
   # TODO: figure out font later
