--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -1,19 +1,38 @@
 setw -g mouse on
 # plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
 
-set -g status-position top
-
-set -g @catppuccin_status_modules_right "directory user host session"
-set -g @resurrect-strategy-nvim 'session'
+run '~/.tmux/plugins/tmux/catppuccin.tmux'
+# set -g @catppuccin_status_modules_right "directory user host session"
+# set -g mocha @resurrect-strategy-nvim 'session'
 set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
 set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-run '~/.tmux/plugins/tpm/tpm'
+set -g @catppuccin_window_status_style "rounded"
 
+# Load catppuccin
+# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# For TPM, instead use
+# run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux'
+# run '~/.tmux/plugins/tmux-plugins/tmux-battery/battery.tmux'
+
+# preferences
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -22,6 +41,15 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g mouse on
+# set -g default-terminal "tmux-256color"
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 0
+set -g status-position top
 
 
 # deprecated settings
@@ -48,13 +76,3 @@ bind -r l select-pane -R
 # set -g @dracula-show-flags true
 # set -g @dracula-show-left-icon session
 # set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
-# dracula customizations
-
-
-set -g @nightowl-show-left-sep ""
-set -g @nightowl-show-right-sep ""
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 0
