update zsh and tmux

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -3,15 +3,15 @@ setw -g mouse on
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 
-run '~/.tmux/plugins/tmux/catppuccin.tmux'
+# run '~/.tmux/plugins/tmux/catppuccin.tmux'
 # set -g @catppuccin_status_modules_right "directory user host session"
 # set -g mocha @resurrect-strategy-nvim 'session'
-set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
-set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
-set -g @catppuccin_window_status_style "rounded"
+# set -g @catppuccin_flavour 'mocha' # or latte, frappe, macchiato, mocha
+# set -g @catppuccin_window_tabs_enabled on # or off to disable window_tabs
+# set -g @catppuccin_window_status_style "rounded"
 
 # Load catppuccin
 # run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
@@ -22,11 +22,11 @@ set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_uptime}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
 
 run '~/.tmux/plugins/tpm/tpm'
 # run '~/.tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux'
@@ -51,6 +51,15 @@ set -g base-index 1
 setw -g pane-base-index 0
 set -g status-position top
 
+# Set status bar background color to dark flat blue
+set -g status-bg colour24  # Colour24 is a dark blue, adjust if needed
+
+# Set status bar text color to white (or any contrasting color)
+set -g status-fg colour15  # Colour15 is white
+
+# Optional: Customize the left and right status bar content
+set -g status-left "#[bg=colour24,fg=colour15] Session: #S #[default]"
+set -g status-right "#[bg=colour24,fg=colour15] %H:%M %d-%b-%y #[default]"
 
 # deprecated settings
 
