update tmux blue

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -51,15 +51,42 @@ set -g base-index 1
 setw -g pane-base-index 0
 set -g status-position top
 
-# Set status bar background color to dark flat blue
-set -g status-bg colour24  # Colour24 is a dark blue, adjust if needed
+# # Set status bar background color to dark flat blue
+# set -g status-bg colour24  # Colour24 is a dark blue, adjust if needed
+#
+# # Set status bar text color to white (or any contrasting color)
+# set -g status-fg colour15  # Colour15 is white
+#
+# # Optional: Customize the left and right status bar content
+# set -g status-left "#[bg=colour24,fg=colour15] #S #[default]"
+# set -g status-right "#[bg=colour24,fg=colour15] %H:%M %d-%b-%y #[default]"
 
-# Set status bar text color to white (or any contrasting color)
-set -g status-fg colour15  # Colour15 is white
+  
+# Set status bar background and text colors
+set -g status-bg colour235  # Dark gray background
+set -g status-fg colour250  # Light gray text
 
-# Optional: Customize the left and right status bar content
-set -g status-left "#[bg=colour24,fg=colour15] Session: #S #[default]"
-set -g status-right "#[bg=colour24,fg=colour15] %H:%M %d-%b-%y #[default]"
+# Set window status colors
+set -g window-status-style "bg=colour238,fg=colour250"  # Inactive tabs
+set -g window-status-current-style "bg=colour39,fg=colour232"  # Active tab
+
+# Customize the left status bar (session name)
+set -g status-left "#[bg=colour39,fg=colour232] #S #[bg=colour235,fg=colour39] "
+
+# Customize the right status bar (time and date)
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232] %H:%M %d-%b-%y #[bg=colour235,fg=colour39]"
+
+# Customize window list (tabs)
+set -g window-status-format " #I:#W "  # Inactive tabs
+set -g window-status-current-format " #I:#W "  # Active tab
+
+# Add padding and separators
+set -g status-left-length 20
+set -g status-right-length 50
+set -g status-interval 1
+
+# Set highlight color for selected session in session selection menu
+set -g mode-style "bg=colour39,fg=colour232"  # Bright blue background, dark text
 
 # deprecated settings
 
