--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -61,7 +61,6 @@ set -g status-position top
 # set -g status-left "#[bg=colour24,fg=colour15] #S #[default]"
 # set -g status-right "#[bg=colour24,fg=colour15] %H:%M %d-%b-%y #[default]"
 
-  
 # Set status bar background and text colors
 set -g status-bg colour235  # Dark gray background
 set -g status-fg colour250  # Light gray text
@@ -71,14 +70,24 @@ set -g window-status-style "bg=colour238,fg=colour250"  # Inactive tabs
 set -g window-status-current-style "bg=colour39,fg=colour232"  # Active tab
 
 # Customize the left status bar (session name)
-set -g status-left "#[bg=colour39,fg=colour232] #S #[bg=colour235,fg=colour39] "
+set -g status-left "#[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
+
+# Fetch battery percentage and store it in a Tmux option
+set -g @battery_percentage "N/A"  # Initialize the variable
+set -g status-interval 60  # Refresh the status bar every 60 seconds
+
+# Update the battery percentage using a shell command
+set -g @battery_percentage "#(bash -c 'if command -v acpi &> /dev/null; then acpi -b | grep -oP \"\\d+%\"; elif command -v pmset &> /dev/null; then pmset -g batt | grep -o \"\\d\\+%\"; else echo \"N/A\"; fi')"
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232] %H:%M %d-%b-%y #[bg=colour235,fg=colour39]"
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] %H:%M %d-%b-%y #[bg=colour235,fg=colour39]"
 
 # Customize window list (tabs)
-set -g window-status-format " #I:#W "  # Inactive tabs
-set -g window-status-current-format " #I:#W "  # Active tab
+# set -g window-status-format " #I:#W "  # Inactive tabs
+# set -g window-status-current-format " #I:#W "  # Active tab
+
+set -g window-status-format " #[default]#I#[default]:#W "  # Inactive tabs
+set -g window-status-current-format " #[default]#I#[default]:#W "  # Active tab
 
 # Add padding and separators
 set -g status-left-length 20
