--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -1,10 +1,4 @@
 setw -g mouse on
-# plugins
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tpm'
 
 # run '~/.tmux/plugins/tmux/catppuccin.tmux'
 # set -g @catppuccin_status_modules_right "directory user host session"
@@ -27,10 +21,6 @@ set -g status-left ""
 # set -ag status-right "#{E:@catppuccin_status_session}"
 # set -ag status-right "#{E:@catppuccin_status_uptime}"
 # set -agF status-right "#{E:@catppuccin_status_battery}"
-
-run '~/.tmux/plugins/tpm/tpm'
-# run '~/.tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux'
-# run '~/.tmux/plugins/tmux-plugins/tmux-battery/battery.tmux'
 
 # preferences
 bind c new-window -c "#{pane_current_path}"
@@ -73,22 +63,36 @@ set -g window-status-current-style "bg=colour39,fg=colour232"  # Active tab
 set -g status-left "#[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] #{battery_percentage} ⛥ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39]"
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⛥ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39] ♯ #{uptime}"
 
 # Customize window list (tabs)
 # set -g window-status-format " #I:#W "  # Inactive tabs
 # set -g window-status-current-format " #I:#W "  # Active tab
 
-set -g window-status-format " #[default]#I#[default]:#W "  # Inactive tabs
-set -g window-status-current-format " #[default]#I#[default]:#W "  # Active tab
+set -g window-status-format " #[default]#I#[default] #W ᚱ "  # Inactive tabs
+set -g window-status-current-format " #[default]#I#[default] #W ᚱ "  # Active tab
+
+# Bold green border for active pane
+set -g pane-active-border-style "fg=brightred,bg=default,bold"
 
 # Add padding and separators
 set -g status-left-length 20
 set -g status-right-length 50
-set -g status-interval 1
+set -g status-interval 60
 
 # Set highlight color for selected session in session selection menu
 set -g mode-style "bg=colour39,fg=colour232"  # Bright blue background, dark text
+
+# plugins
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'robhurring/tmux-uptime'
+set -g @plugin 'tmux-plugins/tpm'
+
+run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux'
+# run '~/.tmux/plugins/tmux-plugins/tmux-battery/battery.tmux'
 
 # deprecated settings
 
