--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -63,17 +63,19 @@ set -g window-status-current-style "bg=colour39,fg=colour232"  # Active tab
 set -g status-left "#[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⛥ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39] ♯ #{uptime}"
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⛥ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39] 𓂀  #{uptime}"
 
 # Customize window list (tabs)
 # set -g window-status-format " #I:#W "  # Inactive tabs
 # set -g window-status-current-format " #I:#W "  # Active tab
 
-set -g window-status-format " #[default]#I#[default] #W ᚱ "  # Inactive tabs
-set -g window-status-current-format " #[default]#I#[default] #W ᚱ "  # Active tab
+set -g window-status-format " #[default]#I#[default] ꑭ#W "  # Inactive tabs
+set -g window-status-current-format " #[default]#I#[default] ꑭ#W "  # Active tab
 
 # Bold green border for active pane
 set -g pane-active-border-style "fg=brightred,bg=default,bold"
+
+set -g message-style 'bg=brightyellow,fg=black'
 
 # Add padding and separators
 set -g status-left-length 20
@@ -81,7 +83,8 @@ set -g status-right-length 50
 set -g status-interval 60
 
 # Set highlight color for selected session in session selection menu
-set -g mode-style "bg=colour39,fg=colour232"  # Bright blue background, dark text
+# set -g mode-style "bg=colour39,fg=colour232"  # Bright blue background, dark text
+set -g mode-style "bg=colour235,fg=brightyellow" 
 
 # plugins
 # set -g @plugin 'tmux-plugins/tmux-sensible'
