tabs now yellow (active)

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -27,7 +27,7 @@ set -g status-fg colour250  # Light gray text
 
 # Set window status colors
 set -g window-status-style "bg=colour238,fg=colour250"  # Inactive tabs
-set -g window-status-current-style "bg=colour39,fg=colour232"  # Active tab
+set -g window-status-current-style "bg=brightyellow,fg=colour232"  # Active tab
 
 # Customize the left status bar (session name)
 set -g status-left "#[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
