removes length on status left

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -46,7 +46,7 @@ set -g pane-active-border-style "fg=brightred,bg=default,bold"
 set -g message-style 'bg=brightyellow,fg=black'
 
 # Add padding and separators
-set -g status-left-length 20
+# set -g status-left-length 20
 set -g status-right-length 50
 set -g status-interval 60
 
