--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -33,12 +33,12 @@ set -g window-status-current-style "bg=brightyellow,fg=colour232"  # Active tab
 set -g status-left "#[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⛥ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39] 𓂀  #{uptime}"
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⛥ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39] 𓂀  #{uptime}  "
 
 # Customize window list (tabs)
 
-set -g window-status-format " #[default]#I#[default] ꑭ#W "  # Inactive tabs
-set -g window-status-current-format " #[default]#I#[default] ꑭ#W "  # Active tab
+set -g window-status-format " #[default]#I#[default] ꑭ#W   "  # Inactive tabs
+set -g window-status-current-format " #[default]#I#[default] ꑭ#W * "  # Active tab
 
 # Bold green border for active pane
 set -g pane-active-border-style "fg=brightred,bg=default,bold"
