chore: moves uptime on the left

--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -12,7 +12,7 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-
+ 
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # set -g default-terminal "tmux-256color"
@@ -30,10 +30,10 @@ set -g window-status-style "bg=colour238,fg=colour250"  # Inactive tabs
 set -g window-status-current-style "bg=brightyellow,fg=colour232"  # Active tab
 
 # Customize the left status bar (session name)
-set -g status-left "#[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
+set -g status-left "#[bg=colour235,fg=white,bold]  #{uptime} #[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⚝ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39] 𓂀  #{uptime}  "
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⚝ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39]"
 # ⛥
 # Customize window list (tabs)
 
