--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -33,7 +33,7 @@ set -g window-status-current-style "bg=brightyellow,fg=colour232"  # Active tab
 set -g status-left "#[bg=colour235,fg=white,bold]  #{uptime} #[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⚝ %H:%M † %d-%b-%y #[bg=colour235,fg=colour39]"
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⚝ %H:%M † %d-%b-%y "
 # ⛥
 # Customize window list (tabs)
 
