--- a/undotted/tmux.conf
+++ b/undotted/tmux.conf
@@ -27,18 +27,18 @@ set -g status-fg colour250  # Light gray text
 
 # Set window status colors
 set -g window-status-style "bg=colour238,fg=colour250"  # Inactive tabs
-set -g window-status-current-style "bg=brightyellow,fg=colour232"  # Active tab
+set -g window-status-current-style "bg=colour238,fg=colour250"  # Active tab
 
 # Customize the left status bar (session name)
 set -g status-left "#[bg=colour235,fg=white,bold]  #{uptime} #[bg=colour39,fg=colour232,bold] ∅︎ #S #[bg=colour235,fg=colour39] "
 
 # Customize the right status bar (time and date)
-set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour232, bold] ⚡︎#{battery_percentage} ⚝ %H:%M † %d-%b-%y "
+set -g status-right "#[bg=colour235,fg=colour39]#[bg=colour39,fg=colour235, bold] ⚡︎#{battery_percentage} ⚝ %H:%M † %d-%b-%y "
 # ⛥
 # Customize window list (tabs)
 
-set -g window-status-format " #[default]#I#[default] ꑭ#W  "  # Inactive tabs
-set -g window-status-current-format " #[default]#I#[default] ꑭ#W* "  # Active tab
+set -g window-status-format "#[default] ꑭ#W #[bg=colour39, fg=colour235] #I "  # Inactive tabs
+set -g window-status-current-format "#[default] ꑭ#W #[bg=brightyellow,fg=colour232] #I "  # Active tab
 
 # Bold green border for active pane
 set -g pane-active-border-style "fg=brightred,bg=default,bold"
